--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "picasso",
+  "name": "posts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://annakharatova.github.io/Posts/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
