--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://annakharatova.github.io/Posts/",
+  "type": "module",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,7 +16,6 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "typescript": "^5.4.3"
   }
 }
